added intensity.function (old name: susp)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ S3method(summary,idm)
 S3method(summary,shr)
 export(idm)
 export(idmModel)
+export(intensity.function)
 export(shr)
 export(simulateIDM)
 export(survIC)
