fixed copy-and-paste bugs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(plot,idm)
 S3method(plot,shr)
 S3method(predict,idm)
 S3method(print,idm)
+S3method(print,predict.idm)
 S3method(print,shr)
 S3method(sim,idmModel)
 S3method(sim,survIC)
